# fossil-cryptic

./: README.md  SECURITY.md  conanfile.py  meson.build
code/logic/: auth.c  cipher.c  dencrypt.c  enc.c  encrypt.c  hash.c  keygen.c  meson.build  rand.c  sign.c
code/logic/fossil/cryptic/: auth.h  cipher.h  dencrypt.h  enc.h  encrypt.h  framework.h  hash.h  keygen.h  rand.h  sign.h
code/tests/: meson.build
code/tests/cases/: test_auth.c  test_auth.cpp  test_cipher.c  test_cipher.cpp  test_enc.c  test_enc.cpp  test_hash.c  test_hash.cpp  test_keygen.c  test_keygen.cpp  test_rand.c  test_rand.cpp  test_sign.c
